<resources>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="telephone">&#160;&#160;&#160;&#160;&#160;&#160;电话</string>
    <string name="add_contact">新建联系人</string>
    <string name="send_sms">发送短信</string>
    <string name="save_contact">保存到已有联系人</string>
    <string name="close_ring">关闭铃声</string>
    <string name="open_ring">开启铃声</string>
    <string name="no_balance">余额不足</string>
    <string name="list">通讯录</string>
    <string name="select_contact">选择联系人</string>
    <string name="delete_contact">删除联系人</string>
    <string name="invite">邀请</string>
    <string name="invite_friends">邀请好友</string>
    <string name="find">查找</string>
    <string name="home">主页</string>
    <string name="recharge">话费充值</string>
    <string name="recharge2">立即充值</string>
    <string name="input_card">请输入充值卡密码</string>
    <string name="input_number">请输入手机号码</string>
    <string name="input_money">请输入兑换金额</string>
    <string name="bind_number">账户绑定号码</string>
    <string name="on_recharge">正在充值</string>
    <string name="recharge_failure">充值失败</string>
    <string name="recharge_success">充值成功</string>
    <string name="recharge1">充值</string>
    <string name="exchange">兑换</string>
    <string name="search_yue">查询余额</string>
    <string name="discount">优惠卡券</string>
    <string name="user">帐号</string>
    <string name="balance">话费余额</string>
    <string name="gold">金币</string>
    <string name="my_gold">我的金币</string>
    <string name="earn_gold">签到赚金币+3</string>
    <string name="time">到期时间</string>
    <string name="friend">左邻右舍</string>
    <string name="sale">商户促销</string>
    <string name="service">便民服务</string>
    <string name="location">我的位置:</string>
    <string name="distance">米以内</string>
    <string name="mall">精品商城</string>
    <string name="finance">我的金融</string>
    <string name="flow">流量充值</string>
    <string name="community">我的圈子</string>
    <string name="family">我的家族</string>
    <string name="camera">拍照</string>
    <string name="post">发送</string>
    <string name="delete">删除</string>
    <string name="delete_friend">删除好友</string>
    <string name="game">我的游戏</string>
    <string name="sign_in">我的签到</string>
    <string name="sign_in_settings">签到设置</string>
    <string name="refresh">刷新</string>
    <string name="share">分享</string>
    <string name="message">消息</string>
    <string name="post_message">发送信息</string>
    <string name="play_game_plus">玩游戏+3</string>
    <string name="play_game_hint">完成游戏任务可获金币</string>
    <string name="play_game">玩游戏</string>
    <string name="recharge_plus">话费充值+2</string>
    <string name="recharge_hint">完成话费充值可获金币</string>
    <string name="to_recharge">去充值</string>
    <string name="share_plus">推荐好友+5</string>
    <string name="share_hint">推荐好友可获金币，每周一次</string>
    <string name="to_share">去推荐</string>
    <string name="search">搜索</string>
    <string name="edit">编辑</string>
    <string name="receiver">收件人</string>
    <string name="input_text">添加文本</string>
    <string name="center">个人中心</string>
    <string name="settings">设置</string>
    <string name="opinion">意见反馈</string>
    <string name="my_number">我的账号</string>
    <string name="my_commission">我的佣金</string>
    <string name="get_commission">提现</string>
    <string name="commission_number">佣金数量：</string>
    <string name="commission_require">必须是一百的整数倍</string>
    <string name="alipay_account">支付宝账户</string>
    <string name="alipay_name">真实姓名</string>
    <string name="tx_record">提现记录</string>
    <string name="all_order">全部订单</string>
    <string name="commission_detail">累计佣金</string>
    <string name="my_team">我的团队</string>
    <string name="a_type">A类客户</string>
    <string name="qr_code">我的二维码</string>
    <string name="meal">套餐</string>
    <string name="work_date">有效期</string>
    <string name="total">话费余额</string>
    <string name="give">赠送余额</string>
    <string name="meal_search">套餐查询</string>
    <string name="good_meal">畅聊套餐</string>
    <string name="recharge_search">充值查询</string>
    <string name="prize_search">奖励查询</string>
    <string name="calllog_search">话单查询</string>
    <string name="change">修改资料</string>
    <string name="save">保存</string>
    <string name="head">头像</string>
    <string name="nick_name">昵称</string>
    <string name="signature">个性签名</string>
    <string name="change_password">修改密码</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="confirm_new_password">请确认新密码</string>
    <string name="change_success">修改成功</string>
    <string name="change_failure">修改失败</string>
    <string name="find_password">找回密码</string>
    <string name="about_us">关于我们</string>
    <string name="help">帮助中心</string>
    <string name="logout">退出登录</string>
    <string name="update">版本更新</string>
    <string name="callback_settings">回拨设置</string>
    <string name="dial_settings">拨打设置</string>
    <string name="log_settings">log设置</string>
    <string name="add">添加</string>
    <string name="register">注册</string>
    <string name="app_name">Call吧</string>
    <string name="dialog_title">温馨提示</string>
    <string name="dialog_ok">确  定</string>
    <string name="dialog_cancel">取  消</string>
    <string name="exit">退出</string>
    <string name="unknown">未知</string>
    <string name="money">元</string>
    <string name="cancel">取消</string>
    <string name="setup">设置</string>
    <string name="ok">确定</string>
    <string name="modify">修改</string>
    <string name="loading">正在加载…</string>
    <string name="rmb">￥</string>
    <string name="cut">剪切</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="setup_success">设置成功</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="result_data_error">数据异常,请重新登录</string>
    <string name="login_timeout">登录超时！</string>
    <string name="login_exception">登录异常！</string>
    <string name="remark_name">备注名</string>
    <string name="remark_info">备注信息</string>
    <string name="set_remark">设置备注</string>
    <string name="getdata_fail">获取数据失败</string>
    <string name="network_error">网络不给力，请检查网络设置</string>
    <string name="conn_timeout">请求超时！</string>
    <string name="socket_timeout">响应超时！</string>
    <string name="conn_failed">无法连接到网络</string>
    <string name="know">知道了</string>
    <string name="net_error_getdata_fail">网络连接超时，获取版本失败。</string>
    <string name="switch_net_retry">切换网络</string>
    <string name="retry">重试</string>
    <string name="getversionfailed">获取版本信息失败!</string>
    <string name="jxbbsb">解析版本信息失败!</string>
    <string name="sjts">升级提示</string>
    <string name="sjtsxx">您目前的版本已停止使用，必须升级新版本才能继续使用！</string>
    <string name="upgrade">升级</string>
    <string name="upgrade_findnewversion">发现新版本，是否现在升级？</string>
    <string name="upgrade_openfailed">无法打开浏览器，请到Callba官网下载最新版本。</string>
    <string name="upgrade_no">已是最新版本</string>
    <string name="networksetup">网络设置</string>
    <string name="networksetupinfo">未检测到网络连接，是否设置？</string>
    <string name="contactempty">联系人为空</string>
    <string name="contact">联系人</string>
    <string name="loadingcontact">正在载入联系人…</string>
    <string name="backup_success">备份成功!</string>
    <string name="backup_failed">备份失败!</string>
    <string name="download_remote_failed">下载闰通通讯录失败！</string>
    <string name="restore_failed_empty">未备份联系人数据，无法恢复！</string>
    <string name="backup_info">是否将手机上的联系人备份到闰通服务器，永久保存？</string>
    <string name="download_contact_tip">将服务器上的联系人保存到本地通讯录，是否继续？</string>
    <string name="gettingremotedata">正在获取云端数据</string>
    <string name="backcallingcontact">正在还原联系人</string>
    <string name="zzbflxr">正在备份联系人</string>
    <string name="backup_title">通讯录同步</string>
    <string name="dqzz">当前账户：</string>
    <string name="bdlxr">本地联系人：</string>
    <string name="ydlxr">云端联系人：</string>
    <string name="bfsjtxl">备份手机通讯录</string>
    <string name="ckkdtxl">查看闰通通讯录</string>
    <string name="ckfwqlxr">查看服务器上的联系人备份数据及添加超级回拨</string>
    <string name="xzkdtxl">下载闰通通讯录</string>
    <string name="xzlxrdsj">从服务器下载联系人保存到手机</string>
    <string name="user_info">详细信息</string>
    <string name="lxrxq">联系人详情</string>
    <string name="cca_checkall">全选</string>
    <string name="cca_uncheckall">取消全选</string>
    <string name="cca_getcontact_fail">获取联系人数据失败！</string>
    <string name="cca_contactcount">共有联系人%1$d个</string>
    <string name="guide_manual">手动注册</string>
    <string name="guide_auto">一键注册</string>
    <string name="guide_login">直接登录</string>
    <string name="login">登录</string>
    <string name="login_back">返回</string>
    <string name="login_account">中国+86</string>
    <string name="login_phone">手机号：</string>
    <string name="login_card">卡密：</string>
    <string name="login_card_hint">请输入充值卡帐号</string>
    <string name="login_password">登录密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="login_register">注册账号</string>
    <string name="login_login">登录账号</string>
    <string name="private_clause">隐私条款</string>
    <string name="login_name_hint">请输入手机号码</string>
    <string name="login_pass_hint">请输入密码</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败</string>
    <string name="input_username">请先输入用户名！</string>
    <string name="input_password">密码不能为空！</string>
    <string name="key_exception">获取版本信息错误,登录异常！</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="manregedit">手动注册</string>
    <string name="manregedit_yijian">一键注册</string>
    <string name="manregedit_acc_hint">请输入手机号码注册</string>
    <string name="manregedit_get_yzm">获取验证码</string>
    <string name="manregedit_yzm">验证码</string>
    <string name="manregedit_yzm_hint">请输入验证码</string>
    <string name="manregedit_pass_hint">请设置6–16位数字/字母</string>
    <string name="fee_cxfl">查询费率</string>
    <string name="fee_flcx">费率查询</string>
    <string name="fee_cx">查询</string>
    <string name="fee_flcxsm">费率查询说明</string>
    <string name="fee_cxinfo">1.按照 00+国家代码+区号+固定电话号码或 00+国家代码+手机号码的规范查询。\n 2.按照国家名称查询，直接输入名称，如美国。</string>
    <string name="fee_cyfl">常用费率</string>
    <string name="fee_zgdl_zbbxh">中国大陆(直拨不显号)</string>
    <string name="fee_1">￥0.05元/分钟</string>
    <string name="fee_dl_zbxh">中国大陆(直拨显号)</string>
    <string name="fee_2">￥0.07元/分钟</string>
    <string name="fee_dl_hbbxh">中国大陆(回拨不显号)</string>
    <string name="fee_3">￥0.08元/分钟</string>
    <string name="fee_dl_hbxh">中国大陆(回拨显号)</string>
    <string name="fee_4">￥0.10元/分钟</string>
    <string name="fee_xjp">新加坡</string>
    <string name="fee_5">￥0.11元/分钟</string>
    <string name="fee_yggh">英国(固话)</string>
    <string name="fee_6">￥0.10元/分钟</string>
    <string name="fee_mgjnd">美国/加拿大</string>
    <string name="fee_7">￥0.10元/分钟</string>
    <string name="fee_xby">西班牙(固话)</string>
    <string name="fee_8">￥0.19元/分钟</string>
    <string name="fee_adly">澳大利亚(固话)</string>
    <string name="fee_9">￥0.10元/分钟</string>
    <string name="invite_title">短信邀请</string>
    <string name="invite_yqhyzhf">邀请好友注册闰通赚话费</string>
    <string name="invite_ljyq">立即邀请</string>
    <string name="invite_jl1">1.好友注册成功后，您将获得1元/人奖励</string>
    <string name="invite_jl2">2.好友成功充值，您将获得充值话费10%作为充值奖励，永久累计！</string>
    <string name="invite_jl3">注：对方需要通过分享地址注册后方算注册成功</string>
    <string name="more_mrqd">每日签到</string>
    <string name="sin_qdjx">每日签到有惊喜</string>
    <string name="sin_sjlqsj">随机领取1–10分钟通话时间！</string>
    <string name="sin_ssb">现在就试试吧！</string>
    <string name="sin_qd">签  到</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="forward">转发</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
</resources>