<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/material_white">
    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="copy"
        android:padding="10dp"
        android:text="@string/copy_message"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="delete"
        android:padding="10dp"
        android:text="@string/delete_message"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

   <TextView
        android:id="@+id/forward"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center_vertical"
        android:onClick="forward"
        android:padding="10dp"
        android:text="@string/forward"
        android:textColor="@android:color/black"
        android:textSize="20sp" />
</LinearLayout>